cmake_minimum_required (VERSION 3.5)

project(dbhistory VERSION 2.0.0)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")


option(DBHISTORY_USE_REGEX "")
IF(DBHISTORY_USE_REGEX)
    ADD_DEFINITIONS(-DDBHISTORY_USE_REGEX)
ENDIF(DBHISTORY_USE_REGEX)

add_subdirectory (src)
enable_testing ()
